cka/q10podnotwork.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    type: mon
  name: podnw
spec:
  containers:
  - image:: busybox
    name: podnw
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
